[package]
name = "urbit-q"
version = "0.1.0"
authors = ["k2l8m11n2"]
edition = "2018"
description = "Encode and decode data in Urbit's @q format"
readme = "README.md"
repository = "https://github.com/k2l8m11n2/urbit-q"
license = "MIT"
keyword = ["urbit", "encoding"]
categories = ["encoding"]

[dependencies]
phf = { version = "0.8", features = ["macros"] }

[dev-dependencies]
proptest = "0.10.0"
