[package]
name = "urbit-q"
version = "0.2.4"
authors = ["k2l8m11n2"]
edition = "2018"
description = "Encode and decode data in Urbit's @q format"
readme = "README.md"
repository = "https://github.com/k2l8m11n2/urbit-q"
license = "MIT"
keywords = ["urbit", "encoding"]
categories = ["encoding"]

[dependencies]
phf = { version = "0.8", features = ["macros"] }

[dev-dependencies]
proptest = "0.10.0"
rand = "0.7.3"
criterion = "0.3.2"

[[bench]]
name = "encdec"
harness = false
